--- a/src/Components/Sidebar/index.css
+++ b/src/Components/Sidebar/index.css
@@ -10,6 +10,7 @@
   background-color: var(--background-color);
   overflow-y: auto;
   width: 250px;
+  flex: 0.3;
 }
 .Interface-box {
   border-bottom: 0.5px solid rgb(160, 165, 172);
