--- a/src/Components/Sidebar/smallComponent.css
+++ b/src/Components/Sidebar/smallComponent.css
@@ -5,6 +5,18 @@
   padding-bottom: 10px;
 }
 
+.link1:hover {
+  background-color: #f5f5f5;
+  border-radius: 30px;
+  transition: color 100ms ease-out;
+}
+
+.link2:hover {
+  background-color: #f5f5f5;
+  border-radius: 30px;
+  transition: color 100ms ease-out;
+}
+
 .interface-box h2 {
   font-family: var(--main-font);
   font-size: 12px; /* Adjust to match the exact size */
@@ -29,4 +41,8 @@
 
 .interface-box a:hover {
   color: rgb(160, 165, 172);
+}
+
+.link_option {
+  color: white;
 }
